meta tags change

--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,9 @@
 
     <title>Saurabh Sanap | Portfolio</title>
     <meta charset="utf-8" />
-    <meta property="og:title" content="Saurabh Sanap | Portfolio">
-    <meta name="keywords" content="Saurabh Sanap,Saurabh,Code Saurabh,Portfolio Saurabh Sanap,Freelance website developer">
-    <meta property="og:description" content="Looking for a talented freelance website developer? Saurabh Sanap has the skills and expertise you need to bring your website vision to life. With a wide range of skills including HTML, CSS, JavaScript, React Node.js , GraphQL, as well as expertise in CMS systems like WordPress and Shopify, Contact Saurabh today to get started. Contact now today to get started on your web development project." name="description">
+    <meta property="og:title" content="Full Stack Developer | AWS & Firebase Integration | React & Node.js Development">
+    <meta name="keywords" content="Full Stack Developer, Web Development, Software Engineer, Frontend Development, Backend Development, AWS, Firebase, JavaScript, React, Node.js, Database Management, Modern Technologies, Cloud Solutions">
+    <meta name="description" content="Discover leading-edge Full Stack Development services, including AWS and Firebase implementations. Expert in creating scalable front-to-back solutions with React, Node.js, and modern cloud technologies. Tailored, robust web applications designed to empower your business in the digital age.">
     <meta property="og:image:type" content="image/jpg">
     <!-- <meta property="og:image" content="Images/SaurabhSanap.jpg">
     <meta name="image" property="og:image" content="Images/SaurabhSanap.jpg"> -->
