--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     <meta property="article:published_time" content="date_time">
     <meta property="og:locale" content="pt_BR">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="google-site-verification" content="" />
+    <meta name="google-site-verification" content="oc3VJLWsA0t8H1GJk0HD_MBgPqzSImxy9m8BCHAuriA" />
 </head>
 
 <body>
